--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Omlee :)</string>
+    <string name="app_name">Omlee 1.1 :)</string>
     <string name="title_job_detail">Job Detail</string>
 
 <!-- TODO: Remove or change this placeholder text -->
