--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -86,7 +86,8 @@
     <color name="red">#FF0000</color>
     <color name="cream">#FFFFCC</color>
     <color name="blue">#3B5998</color>
-    <color name="yellow">#A16F0E</color>
+    <!--<color name="yellow">#A16F0E</color>-->
+    <color name="yellow">#FFF176</color>
     <color name="black">#000000</color>
 
 
